@@ -151,3 +151,29 @@ int EU3Army::getProbabilisticHomeProvince(RegimentCategory category)
 	}
 	return homeProvinces[int(homeProvinces.size() * ((double)rand() / RAND_MAX))];
 }
+
+
+
+void AddCategoryToRegimentTypeMap(Object* obj, RegimentCategory category, string categoryName, RegimentTypeMap& rtm)
+{
+	vector<Object*> top = obj->getValue(categoryName);
+	if (top.size() != 1)
+	{
+		log("Error: could not get regiment type map for %s", categoryName);
+		printf("Error: could not get regiment type map for %s", categoryName);
+		exit(1);
+	}
+	vector<Object*> types = top[0]->getLeaves();
+	if (types.size() == 0)
+	{
+		log("Error: no regiment types to map for %s", categoryName);
+		printf("Error: no regiment types to map for %s", categoryName);
+		exit(1);
+	}
+	for (vector<Object*>::iterator itr = types.begin(); itr != types.end(); ++itr)
+	{
+		string type = (*itr)->getKey();
+		string strength = (*itr)->getLeaf();
+		rtm[type] = pair<RegimentCategory, int>(category, atoi(strength.c_str()));
+	}
+}
