@@ -14,6 +14,29 @@ void outputHeader(FILE* output)
 }
 
 
+void outputTempReforms(FILE* output)
+{
+	fprintf(output, "	wage_reform=no_minimum_wage\n");
+	fprintf(output, "	work_hours=no_work_hour_limit\n");
+	fprintf(output, "	safety_regulations=no_safety\n");
+	fprintf(output, "	unemployment_subsidies=no_subsidies\n");
+	fprintf(output, "	pensions=no_pensions\n");
+	fprintf(output, "	health_care=no_health_care\n");
+	fprintf(output, "	slavery=yes_slavery\n");
+}
+
+
+void outputTempReforms2(FILE* output)
+{
+	fprintf(output, "	upper_house_composition=appointed\n");
+	fprintf(output, "	voting_system=first_past_the_post\n");
+	fprintf(output, "	public_meetings=no_meeting\n");
+	fprintf(output, "	press_rights=state_press\n");
+	fprintf(output, "	trade_unions=no_trade_unions\n");
+	fprintf(output, "	political_parties=underground_parties\n");
+}
+
+
 void outputCountryHeader(FILE* output)
 {
 	fprintf(output, "	upper_house=\n");
@@ -23,6 +46,7 @@ void outputCountryHeader(FILE* output)
 	fprintf(output, "		liberal=0.00000\n");
 	fprintf(output, "	}\n");
 }
+
 
 void outputCountryHeader2(FILE* output)
 {
